# BOTSORT-AS

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/botsort/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  botsort_tracking_example.cpp  native-lib.cpp
app/src/main/cpp/BOT/: CMakeLists.txt
app/src/main/cpp/BOT/include/: BoTSORT.h  profiler.h
app/src/main/cpp/BOT/src/: BoTSORT.cpp
app/src/main/java/com/example/botsort/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/botsort/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
